--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -69,27 +69,27 @@
             background-color: #45a049;
             color: white;
         }
-       .content-wrapper {
-    margin: 120px auto 20px auto;
-    padding: 20px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow-y: auto;
-    max-height: calc(100vh - 140px);
-    width: 90%; /* Garante ajuste em telas menores */
-    max-width: 800px; /* Limita o tamanho máximo */
-}
+        .content-wrapper {
+            margin: 120px auto 20px auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            overflow-y: auto;
+            max-height: calc(100vh - 140px);
+            width: 90%; /* Garante ajuste em telas menores */
+            max-width: 800px; /* Limita o tamanho máximo */
+        }
         .highlight {
             background-color: yellow;
         }
-      .spacer {
-    margin: 20px 0;
-    border-top: 2px solid #4CAF50;
-    clear: both; /* Garante que o espaçamento não "flutue" */
-    width: 100%; /* Garante que a linha ocupe 100% do contêiner */
-    height: 2px; /* Limita a altura visível */
-}
+        .spacer {
+            margin: 20px 0;
+            border-top: 2px solid #4CAF50;
+            clear: both; /* Garante que o espaçamento não "flutue" */
+            width: 100%; /* Garante que a linha ocupe 100% do contêiner */
+            height: 2px; /* Limita a altura visível */
+        }
     </style>
 </head>
 <body>
@@ -132,84 +132,81 @@
             }
         }
 
- function processTextFile(data) {
-    const lines = data.split('\n');
-    const contentDiv = document.getElementById('content');
+        function processTextFile(data) {
+            const lines = data.split('\n');
+            const contentDiv = document.getElementById('content');
 
-    lines.forEach((line, index) => {
-        if (line.trim()) {
-            const [type, lang, text] = line.split('|');
-            if (type) {
-                let element;
+            lines.forEach((line, index) => {
+                if (line.trim()) {
+                    const [type, lang, text] = line.split('|');
+                    if (type) {
+                        let element;
 
-                switch (type) {
-                    case 'title':
-                        element = document.createElement('h1');
-                        break;
-                    case 'subtitle':
-                        element = document.createElement('h2');
-                        break;
-                    case 'text':
-                        element = document.createElement('p');
-                        break;
-                    case 'text-bold':
-                        element = document.createElement('p');
-                        element.style.fontWeight = 'bold';
-                        break;
-                    case 'text-bold-large':
-                        element = document.createElement('p');
-                        element.style.fontWeight = 'bold';
-                        element.style.fontSize = '1.5em'; // Aumenta a fonte
-                        break;
-                    case 'spacer':
-                        element = document.createElement('div');
-                        element.className = 'spacer';
-                        break;
-                    default:
-                        console.warn(`Tipo desconhecido: ${type}`);
-                }
+                        switch (type) {
+                            case 'title':
+                                element = document.createElement('h1');
+                                break;
+                            case 'subtitle':
+                                element = document.createElement('h2');
+                                break;
+                            case 'text':
+                                element = document.createElement('p');
+                                break;
+                            case 'text-bold':
+                                element = document.createElement('p');
+                                element.style.fontWeight = 'bold';
+                                break;
+                            case 'text-bold-large':
+                                element = document.createElement('p');
+                                element.style.fontWeight = 'bold';
+                                element.style.fontSize = '1.5em';
+                                break;
+                            case 'spacer':
+                                element = document.createElement('div');
+                                element.className = 'spacer';
+                                break;
+                            default:
+                                console.warn(`Tipo desconhecido: ${type}`);
+                        }
 
-                if (element) {
-                    if (text && type !== 'spacer') {
-                        element.innerText = text.trim();
+                        if (element) {
+                            if (text && type !== 'spacer') {
+                                element.innerText = text.trim();
+                            }
+                            element.lang = lang || '';
+                            element.id = `line-${index}`;
+                            contentDiv.appendChild(element);
+
+                            if (type !== 'spacer') {
+                                texts.push({ id: element.id, lang, text: text ? text.trim() : '' });
+
+                                // Adiciona evento de clique para leitura manual
+                                element.addEventListener('click', () => {
+                                    handleTextClick(index);
+                                });
+                            }
+                        }
                     }
-                    element.lang = lang || '';
-                    element.id = `line-${index}`; // Defina um ID único para cada elemento
-                    contentDiv.appendChild(element);
-
-                    // Adiciona elementos ao array de textos para o sintetizador
-                    if (type !== 'spacer') {
-                        texts.push({ id: element.id, lang, text: text ? text.trim() : '' });
-
-                        // Adiciona evento de clique para leitura manual
-                        element.addEventListener('click', () => {
-                            handleTextClick(index);
-                        });
-                    }
                 }
+            });
+        }
+
+        function handleTextClick(index) {
+            if (isPlaying && currentIndex === index) {
+                pauseLesson();
+            } else {
+                isPlaying = true;
+                currentIndex = index;
+                updateButtonState();
+                speakNext();
             }
         }
-    });
-}
-
-function handleTextClick(index) {
-    if (isPlaying && currentIndex === index) {
-        // Se estiver lendo e o usuário clicar no mesmo trecho, pausar
-        pauseLesson();
-    } else {
-        // Se o usuário clicar em um novo trecho, começar a ler a partir desse ponto
-        isPlaying = true;
-        currentIndex = index;
-        updateButtonState();
-        speakNext();
-    }
-}
 
         function toggleLesson() {
-    isPlaying = !isPlaying;
-    updateButtonState();
-    isPlaying ? startLesson() : pauseLesson();
-}
+            isPlaying = !isPlaying;
+            updateButtonState();
+            isPlaying ? startLesson() : pauseLesson();
+        }
 
         function startLesson() {
             if (currentIndex >= texts.length) currentIndex = 0;
@@ -218,6 +215,8 @@ function handleTextClick(index) {
 
         function pauseLesson() {
             speechSynthesis.cancel();
+            isPlaying = false; // Atualiza o estado para refletir que a leitura foi pausada
+            updateButtonState();
         }
 
         function updateButtonState() {
@@ -226,67 +225,48 @@ function handleTextClick(index) {
             button.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi ${icon}" viewBox="0 0 16 16"></svg> ${isPlaying ? 'Pause' : 'Start'} Lesson`;
         }
 
-     function speakNext() {
-    if (currentIndex < texts.length) {
-        const { id, text, lang } = texts[currentIndex];
-        if (!text.trim()) { // Ignora elementos sem texto
-            currentIndex++;
-            speakNext();
-            return;
-        }
+        function speakNext() {
+            if (currentIndex < texts.length) {
+                const { id, text, lang } = texts[currentIndex];
+                if (!text.trim()) {
+                    currentIndex++;
+                    speakNext();
+                    return;
+                }
 
-        const element = document.getElementById(id);
-        if (!element) { // Verifica se o elemento existe antes de tentar usar
-            console.warn(`Elemento não encontrado: ${id}`);
-            currentIndex++;
-            speakNext();
-            return;
-        }
+                const element = document.getElementById(id);
+                if (!element) {
+                    console.warn(`Elemento não encontrado: ${id}`);
+                    currentIndex++;
+                    speakNext();
+                    return;
+                }
 
-        // Remove destaque de qualquer trecho anterior
-        document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
+                document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
+                element.classList.add('highlight');
 
-        element.classList.add('highlight');
+                utterance = new SpeechSynthesisUtterance(text);
+                utterance.lang = lang;
+                utterance.onend = () => {
+                    element.classList.remove('highlight');
+                    currentIndex++;
+                    if (isPlaying) {
+                        speakNext();
+                    }
+                };
 
-        utterance = new SpeechSynthesisUtterance(text);
-        utterance.lang = lang;
-        utterance.onend = () => {
-            element.classList.remove('highlight');
-            currentIndex++;
-            if (isPlaying) {
-                speakNext(); // Continua a leitura automaticamente se estiver tocando
+                speechSynthesis.speak(utterance);
+                scrollToElement(element);
+            } else {
+                pauseLesson();
             }
-        };
-
-        speechSynthesis.speak(utterance);
-        scrollToElement(element);
-    } else {
-        pauseLesson();
-    }
-}
+        }
 
         function scrollToElement(element) {
             const contentWrapper = document.getElementById('contentWrapper');
             const position = element.offsetTop - (contentWrapper.clientHeight / 2);
             contentWrapper.scrollTo({ top: position, behavior: 'smooth' });
         }
-
-function toggleLesson() {
-    isPlaying = !isPlaying;
-    updateButtonState();
-    console.log(`Toggle lesson. isPlaying: ${isPlaying}`); // Adicione este log para verificar se a função está sendo chamada
-    isPlaying ? startLesson() : pauseLesson();
-}
-
-// Converte texto com ** para HTML com <strong>
-function parseText(text) {
-    return text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
-}
-
-// Remove os asteriscos para o sintetizador de voz
-function stripAsterisks(text) {
-    return text.replace(/\*\*/g, '');
-}
 
         window.onload = loadTextFile;
     </script>
