--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -77,8 +77,8 @@
             border-radius: 8px;
             overflow-y: auto;
             max-height: calc(100vh - 140px);
-            width: 90%; /* Garante ajuste em telas menores */
-            max-width: 800px; /* Limita o tamanho máximo */
+            width: 90%;
+            max-width: 800px;
         }
         .highlight {
             background-color: yellow;
@@ -86,9 +86,9 @@
         .spacer {
             margin: 20px 0;
             border-top: 2px solid #4CAF50;
-            clear: both; /* Garante que o espaçamento não "flutue" */
-            width: 100%; /* Garante que a linha ocupe 100% do contêiner */
-            height: 2px; /* Limita a altura visível */
+            clear: both;
+            width: 100%;
+            height: 2px;
         }
     </style>
 </head>
@@ -192,20 +192,22 @@
         }
 
         function handleTextClick(index) {
-            if (isPlaying && currentIndex === index) {
-                pauseLesson();
-            } else {
-                isPlaying = true;
-                currentIndex = index;
-                updateButtonState();
-                speakNext();
-            }
+            // Cancelar a leitura atual antes de iniciar a nova
+            speechSynthesis.cancel();
+            isPlaying = true;
+            currentIndex = index;
+            updateButtonState();
+            speakNext();
         }
 
         function toggleLesson() {
             isPlaying = !isPlaying;
             updateButtonState();
-            isPlaying ? startLesson() : pauseLesson();
+            if (isPlaying) {
+                startLesson();
+            } else {
+                pauseLesson();
+            }
         }
 
         function startLesson() {
@@ -215,7 +217,7 @@
 
         function pauseLesson() {
             speechSynthesis.cancel();
-            isPlaying = false; // Atualiza o estado para refletir que a leitura foi pausada
+            isPlaying = false;
             updateButtonState();
         }
 
@@ -242,6 +244,7 @@
                     return;
                 }
 
+                // Remove destaque de qualquer trecho anterior
                 document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
                 element.classList.add('highlight');
 
