--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRAMMAR</title>
     <style>
@@ -197,7 +198,7 @@
             isPlaying = true;
             currentIndex = index;
             updateButtonState();
-            speakNext();
+            speakSpecific(index);
         }
 
         function toggleLesson() {
@@ -229,40 +230,44 @@
 
         function speakNext() {
             if (currentIndex < texts.length) {
-                const { id, text, lang } = texts[currentIndex];
-                if (!text.trim()) {
-                    currentIndex++;
-                    speakNext();
-                    return;
-                }
-
-                const element = document.getElementById(id);
-                if (!element) {
-                    console.warn(`Elemento não encontrado: ${id}`);
-                    currentIndex++;
-                    speakNext();
-                    return;
-                }
-
-                // Remove destaque de qualquer trecho anterior
-                document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
-                element.classList.add('highlight');
-
-                utterance = new SpeechSynthesisUtterance(text);
-                utterance.lang = lang;
-                utterance.onend = () => {
-                    element.classList.remove('highlight');
-                    currentIndex++;
-                    if (isPlaying) {
-                        speakNext();
-                    }
-                };
-
-                speechSynthesis.speak(utterance);
-                scrollToElement(element);
+                speakSpecific(currentIndex);
             } else {
                 pauseLesson();
             }
+        }
+
+        function speakSpecific(index) {
+            const { id, text, lang } = texts[index];
+            if (!text.trim()) {
+                currentIndex++;
+                speakNext();
+                return;
+            }
+
+            const element = document.getElementById(id);
+            if (!element) {
+                console.warn(`Elemento não encontrado: ${id}`);
+                currentIndex++;
+                speakNext();
+                return;
+            }
+
+            // Remove destaque de qualquer trecho anterior
+            document.querySelectorAll('.highlight').forEach(el => el.classList.remove('highlight'));
+            element.classList.add('highlight');
+
+            utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = lang;
+            utterance.onend = () => {
+                element.classList.remove('highlight');
+                currentIndex++;
+                if (isPlaying) {
+                    speakNext();
+                }
+            };
+
+            speechSynthesis.speak(utterance);
+            scrollToElement(element);
         }
 
         function scrollToElement(element) {
