--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRAMMAR</title>
     <style>
@@ -175,15 +174,15 @@
                                 element.innerText = text.trim();
                             }
                             element.lang = lang || '';
-                            element.id = `line-${index}`;
+                            element.dataset.index = index; // Usando data-atributo para associar ao índice correto
                             contentDiv.appendChild(element);
 
                             if (type !== 'spacer') {
-                                texts.push({ id: element.id, lang, text: text ? text.trim() : '' });
+                                texts.push({ id: element.dataset.index, lang, text: text ? text.trim() : '' });
 
                                 // Adiciona evento de clique para leitura manual
                                 element.addEventListener('click', () => {
-                                    handleTextClick(index);
+                                    handleTextClick(parseInt(element.dataset.index));
                                 });
                             }
                         }
@@ -237,16 +236,17 @@
         }
 
         function speakSpecific(index) {
-            const { id, text, lang } = texts[index];
+            const { text, lang } = texts[index];
+            const element = document.querySelector(`[data-index='${index}']`);
+            
             if (!text.trim()) {
                 currentIndex++;
                 speakNext();
                 return;
             }
 
-            const element = document.getElementById(id);
             if (!element) {
-                console.warn(`Elemento não encontrado: ${id}`);
+                console.warn(`Elemento não encontrado: ${index}`);
                 currentIndex++;
                 speakNext();
                 return;
