--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -194,10 +194,10 @@
         function handleTextClick(index) {
             // Cancelar a leitura atual antes de iniciar a nova
             speechSynthesis.cancel();
-            isPlaying = true;
-            currentIndex = index;
+            currentIndex = index; // Atualiza o índice para o trecho clicado
+            isPlaying = true; // Marca como leitura ativa
             updateButtonState();
-            speakSpecific(index);
+            speakSpecific(currentIndex); // Inicia a leitura do trecho específico clicado
         }
 
         function toggleLesson() {
@@ -238,7 +238,7 @@
         function speakSpecific(index) {
             const { text, lang } = texts[index];
             const element = document.querySelector(`[data-index='${index}']`);
-            
+
             if (!text.trim()) {
                 currentIndex++;
                 speakNext();
