--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -174,7 +174,7 @@
                                 element.innerText = text.trim();
                             }
                             element.lang = lang || '';
-                            element.dataset.index = index; // Usando data-atributo para associar ao índice correto
+                            element.dataset.index = index;
                             contentDiv.appendChild(element);
 
                             if (type !== 'spacer') {
@@ -194,10 +194,12 @@
         function handleTextClick(index) {
             // Cancelar a leitura atual antes de iniciar a nova
             speechSynthesis.cancel();
-            currentIndex = index; // Atualiza o índice para o trecho clicado
+
+            // Atualiza o índice para o trecho clicado e inicia a leitura específica
+            currentIndex = index;
             isPlaying = true; // Marca como leitura ativa
             updateButtonState();
-            speakSpecific(currentIndex); // Inicia a leitura do trecho específico clicado
+            speakSpecific(index);
         }
 
         function toggleLesson() {
@@ -266,6 +268,7 @@
                 }
             };
 
+            speechSynthesis.cancel(); // Cancela qualquer fala anterior antes de começar a nova
             speechSynthesis.speak(utterance);
             scrollToElement(element);
         }
