--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -174,7 +174,7 @@
                                 element.innerText = text.trim();
                             }
                             element.lang = lang || '';
-                            element.dataset.index = index;
+                            element.dataset.index = index; // Atribuindo o índice do elemento
                             contentDiv.appendChild(element);
 
                             if (type !== 'spacer') {
@@ -182,7 +182,7 @@
 
                                 // Adiciona evento de clique para leitura manual
                                 element.addEventListener('click', () => {
-                                    handleTextClick(parseInt(element.dataset.index));
+                                    handleTextClick(index);
                                 });
                             }
                         }
@@ -195,11 +195,11 @@
             // Cancelar a leitura atual antes de iniciar a nova
             speechSynthesis.cancel();
 
-            // Atualiza o índice para o trecho clicado e inicia a leitura específica
+            // Atualiza o índice para o trecho clicado
             currentIndex = index;
             isPlaying = true; // Marca como leitura ativa
             updateButtonState();
-            speakSpecific(index);
+            speakSpecific(currentIndex); // Inicia a leitura do trecho específico clicado
         }
 
         function toggleLesson() {
@@ -268,7 +268,8 @@
                 }
             };
 
-            speechSynthesis.cancel(); // Cancela qualquer fala anterior antes de começar a nova
+            // Cancelar qualquer fala anterior antes de iniciar a nova
+            speechSynthesis.cancel();
             speechSynthesis.speak(utterance);
             scrollToElement(element);
         }
