--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -182,7 +182,7 @@
 
                                 // Adiciona evento de clique para leitura manual
                                 element.addEventListener('click', () => {
-                                    handleTextClick(index);
+                                    handleTextClick(parseInt(element.dataset.index));
                                 });
                             }
                         }
@@ -199,7 +199,7 @@
             currentIndex = index;
             isPlaying = true; // Marca como leitura ativa
             updateButtonState();
-            speakSpecific(currentIndex); // Inicia a leitura do trecho específico clicado
+            speakSpecific(index); // Inicia a leitura do trecho específico clicado
         }
 
         function toggleLesson() {
