--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -177,6 +177,7 @@
                             element.dataset.index = index;
                             contentDiv.appendChild(element);
 
+                            // Apenas adiciona elementos legíveis à lista de textos
                             if (type !== 'spacer') {
                                 texts.push({ id: element.dataset.index, lang, text: text ? text.trim() : '' });
 
@@ -196,7 +197,7 @@
             speechSynthesis.cancel();
 
             // Atualiza o índice para o trecho clicado
-            currentIndex = index;
+            currentIndex = texts.findIndex(item => item.id == index);
             isPlaying = true; // Marca como leitura ativa
             updateButtonState();
             speakSpecific(currentIndex); // Inicia a leitura do trecho específico clicado
@@ -230,10 +231,6 @@
         }
 
         function speakNext() {
-            while (currentIndex < texts.length && texts[currentIndex].text.trim() === '') {
-                currentIndex++; // Pula elementos vazios ou do tipo 'spacer'
-            }
-
             if (currentIndex < texts.length) {
                 speakSpecific(currentIndex);
             } else {
@@ -243,7 +240,7 @@
 
         function speakSpecific(index) {
             const { text, lang } = texts[index];
-            const element = document.querySelector(`[data-index='${index}']`);
+            const element = document.querySelector(`[data-index='${texts[index].id}']`);
 
             if (!text.trim()) {
                 currentIndex++;
@@ -252,7 +249,7 @@
             }
 
             if (!element) {
-                console.warn(`Elemento não encontrado: ${index}`);
+                console.warn(`Elemento não encontrado: ${texts[index].id}`);
                 currentIndex++;
                 speakNext();
                 return;
