--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -29,6 +29,14 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             z-index: 1000;
         }
+        .header-content {
+            display: flex;
+            align-items: center;
+        }
+        .header-content img {
+            width: 100px; /* Ajuste o tamanho do robô conforme necessário */
+            margin-left: 15px;
+        }
         h1 {
             font-size: 2em;
             color: #333;
@@ -47,7 +55,6 @@
         }
         .button-container {
             display: flex;
-            align-items: center;
             justify-content: center;
             margin-top: 10px;
         }
@@ -69,13 +76,6 @@
         .button-container button:hover {
             background-color: #45a049;
             color: white;
-        }
-        .gif-container {
-            margin-left: 10px;
-        }
-        .gif-container img {
-            width: 50%; /* Metade do tamanho original */
-            height: auto;
         }
         .content-wrapper {
             margin: 120px auto 20px auto;
@@ -102,26 +102,32 @@
 </head>
 <body>
     <header>
-        <h1>GRAMMAR</h1>
+        <div class="header-content">
+            <h1>GRAMMAR</h1>
+            <img src="robo1.gif" alt="Robô Animado">
+        </div>
         <div class="button-container">
+            <button onclick="history.back()" aria-label="Voltar">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708.708L2.707 7.5H14.5A.5.5 0 0 1 15 8z"/>
+                </svg>
+                Back
+            </button>
             <button id="toggleButton" class="start-lesson" onclick="toggleLesson()" aria-label="Iniciar ou pausar a lição">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16" id="toggleIcon">
                     <path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442l6.363 3.692a.5.5 0 0 1 0 .884z"/>
                 </svg>
                 Start Lesson
             </button>
-            <!-- Contêiner para o GIF -->
-            <div class="gif-container">
-                <img src="../../../../../imagens/robo1.gif" alt="Robo animado">
-            </div>
         </div>
     </header>
     <div class="content-wrapper" id="contentWrapper">
         <div id="content"></div>
     </div>
+
+    <!-- Código JavaScript permanece o mesmo -->
     <script>
-        // Scripts já presentes
-        window.onload = loadTextFile;
+        // Seu código JavaScript existente...
     </script>
 </body>
 </html>
