--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -104,7 +104,7 @@
     <header>
         <div class="header-content">
             <h1>GRAMMAR</h1>
-            <img src="robo1.gif" alt="Robô Animado">
+            <img src="../../../../../imagens/robo1.gif" alt="Robô Animado">
         </div>
         <div class="button-container">
             <button onclick="history.back()" aria-label="Voltar">
