--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -103,7 +103,7 @@
     <header>
         <div class="header-content">
             <h1>GRAMMAR</h1>
-            <img src="../../../../../imagens/robo1.gif" alt="Robô Animado">
+            <img id="robotImage" src="../../../../../imagens/robo1_static.png" alt="Robô Animado" class="robot">
         </div>
         <div class="button-container">
             <button onclick="history.back()" aria-label="Voltar">
@@ -271,12 +271,20 @@
 
             utterance = new SpeechSynthesisUtterance(text);
             utterance.lang = lang;
+
+            // Troca a imagem para o GIF animado quando começar a leitura
+            const robotImage = document.getElementById('robotImage');
+            robotImage.src = '../../../../../imagens/robo1.gif';
+
             utterance.onend = () => {
                 element.classList.remove('highlight');
                 currentIndex++;
                 if (isPlaying) {
                     speakNext();
                 }
+
+                // Troca de volta para a imagem estática quando terminar a leitura
+                robotImage.src = '../../../../../imagens/robo1_static.png';
             };
 
             // Cancelar qualquer fala anterior antes de iniciar a nova
