--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -232,6 +232,9 @@
             speechSynthesis.cancel();
             isPlaying = false;
             updateButtonState();
+            // Troca de volta para a imagem estática quando a leitura é pausada
+            const robotImage = document.getElementById('robotImage');
+            robotImage.src = '../../../../../imagens/robo1_static.png';
         }
 
         function updateButtonState() {
