--- a/Level1/Unit1/Grammar/aulas/aula5/index.html
+++ b/Level1/Unit1/Grammar/aulas/aula5/index.html
@@ -130,6 +130,7 @@
         let currentIndex = 0;
         let utterance;
         let isTransitioning = false;  // Flag para saber se está apenas mudando para o próximo texto
+        let resumedAfterPause = false; // Flag para saber se a leitura foi retomada após uma pausa
 
         async function loadTextFile() {
             try {
@@ -210,6 +211,7 @@
             // Atualiza o índice para o trecho clicado
             currentIndex = texts.findIndex(item => item.id == index);
             isPlaying = true; // Marca como leitura ativa
+            resumedAfterPause = false; // Resetar a flag pois foi clicado manualmente
             updateButtonState();
             speakSpecific(currentIndex); // Inicia a leitura do trecho específico clicado
         }
@@ -218,6 +220,7 @@
             isPlaying = !isPlaying;
             updateButtonState();
             if (isPlaying) {
+                resumedAfterPause = true; // Marca que foi retomado após pausa
                 startLesson();
             } else {
                 pauseLesson();
@@ -278,9 +281,14 @@
             utterance = new SpeechSynthesisUtterance(text);
             utterance.lang = lang;
 
-            // Troca a imagem para o GIF animado quando começar a leitura
+            // Escolher qual GIF será mostrado dependendo do estado da leitura
             const robotImage = document.getElementById('robotImage');
-            robotImage.src = '../../../../../imagens/robo1.gif';
+            if (resumedAfterPause) {
+                robotImage.src = '../../../../../imagens/robo2.gif';
+                resumedAfterPause = false; // Reseta a flag após iniciar a leitura
+            } else {
+                robotImage.src = '../../../../../imagens/robo1.gif';
+            }
 
             utterance.onend = () => {
                 element.classList.remove('highlight');
